[package]
name = "astral-version-ranges"
version = "0.1.4"
description = "Performance-optimized type for generic version ranges and operations on them."
edition = "2021"
repository = "https://github.com/astral-sh/pubgrub"
license = "MPL-2.0"
keywords = ["version", "pubgrub", "selector", "ranges"]
include = ["LICENSE", "README.md", "number-line-ranges.svg", "src/**"]

[lib]
name = "version_ranges"

[dependencies]
proptest = { version = "1.6.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
smallvec = { version = "1.14.0", features = ["union"] }

[features]
serde = ["dep:serde", "smallvec/serde"]

[dev-dependencies]
proptest = "1.6.0"
ron = "0.12.0"
